[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sslserver"
version = "1.0.0"
authors = [
  { name="https://github.com/Y4hL" },
]
description = "Adds SSL support for classes in socketserver"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Y4hL/sslserver"
"Bug Tracker" = "https://github.com/Y4hL/sslserver/issues"
